--- a/assessment.html
+++ b/assessment.html
@@ -27,7 +27,7 @@
 
     <div class="container pt-5">
       <h1>あなたのいいところを診断します</h1>
-      <p>診断したい名前を入れて下さい</p>
+      <p>診断したい名前を入力してください</p>
 
       <div class="row">
         <div class="col-sm-9 col-lg-6">
